trunk/Archive2/4e/de9f86be872ac7/output
main.cpp: In member function 'void Trampoline::enable_f1()':
main.cpp:45:54: error: invalid use of non-static member function 'virtual int Base::func_1(void*, int) const'
     void enable_f1() { table.fp_1 = trap_gen<>(Base::func_1); }
                                                      ^
main.cpp: In member function 'void Trampoline::enable_f2()':
main.cpp:46:54: error: invalid use of non-static member function 'virtual float Base::func_2(void*, int, int) const'
     void enable_f2() { table.fp_2 = trap_gen<>(Base::func_2); }
                                                      ^
main.cpp: In member function 'void Trampoline::enable_f3()':
main.cpp:47:54: error: invalid use of non-static member function 'virtual float Base::func_3(void*, char) const'
     void enable_f3() { table.fp_3 = trap_gen<>(Base::func_3); }
                                                      ^
